jetty/kubernetes/gateway/nomulus-gateway.yaml
# ALL UD kubernetes config was moved to nomulus-secrets
# this is to avoid merge conflicts when pulling in upstream


apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nomulus
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  addresses:
  - type: NamedAddress
    value: nomulus-ipv4-address
  - type: NamedAddress
    value: nomulus-ipv6-address
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: nomulus
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: redirect
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
