jetty/kubernetes/gateway/nomulus-route-backend.yaml
# ALL UD kubernetes config was moved to nomulus-secrets
# this is to avoid merge conflicts when pulling in upstream

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
    sectionName: https
  hostnames:
    - "backend.BASE_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/task
    - path:
        type: PathPrefix
        value: /_dr/cron
    - path:
        type: PathPrefix
        value: /_dr/admin
    - path:
        type: PathPrefix
        value: /_dr/epptool
    - path:
        type: PathPrefix
        value: /_dr/loadtest
    - path:
        type: PathPrefix
        value: /_dr/mosapi
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: backend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/task
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /_dr/cron
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /_dr/admin
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /_dr/epptool
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /_dr/loadtest
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /_dr/mosapi
      headers:
      - name: "canary"
        value: "true"
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: backend-canary
      port: 80
