jetty/kubernetes/gateway/nomulus-route-console.yaml
# ALL UD kubernetes config was moved to nomulus-secrets
# this is to avoid merge conflicts when pulling in upstream

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: console
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
    sectionName: https
  hostnames:
    - "console.BASE_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /console-api
    - path:
        type: PathPrefix
        value: /console
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: console
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /console-api
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /console
      headers:
      - name: "canary"
        value: "true"
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: console-canary
      port: 80
