jetty/kubernetes/gateway/nomulus-route-frontend.yaml
# ALL UD kubernetes config was moved to nomulus-secrets
# this is to avoid merge conflicts when pulling in upstream

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
    sectionName: https
  hostnames:
    - "frontend.BASE_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/epp
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: frontend
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /_dr/epp
      headers:
      - name: "canary"
        value: "true"
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: frontend-canary
      port: 80
